clang/test/BSC/Negative/Ownership/Owned/owned_struct/owned_struct.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

#include "owned_struct_cbs.h"

int main() {
    struct A _Owned a; // expected-error {{type of 'struct A' cannot be qualified by '_Owned'}}
    return 0;
}
